# testingC-

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: gl.c.59C6A4BAF0E4D739.idx  gl.h.7976E9523E68817B.idx  khrplatform.h.271031FC73B41B56.idx  main.cpp.663549D0C1761453.idx
resources/shaders/: AIpaddle.vert  ball.frag  ball.vert
src/: ai_player.h  circle.cpp  game_objects.h  main.cpp  my_engine.h  object.h  primatives.h  rectangle.cpp  shader.h  text_renderer.cpp  text_renderer.h
